--- a/DynamicWeb/DynamicWeb/templates/fill.html
+++ b/DynamicWeb/DynamicWeb/templates/fill.html
@@ -6,8 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Showing form</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-    {{submission}}
+    <div class="container">
+        <div class="jumbotron">
+            {{data}}
+        </div>
+        <div class="row justify-content-center">
+            <form action="" method="POST" class="col-lg-8 col-md-10 col-sm-12 shadow rounded p-4">
+                {%csrf_token%}
+                <!-- {{submission|crispy}} -->
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        {{submission.org|as_crispy_field}}
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        {{submission.nature|as_crispy_field}}
+                    </div>
+                </div>
+                {{submission.opennings|as_crispy_field}}
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        {{submission.employees|as_crispy_field}}
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        {{submission.place|as_crispy_field}}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        {{submission.basic|as_crispy_field}}
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        {{submission.ratings|as_crispy_field}}
+                    </div>
+                </div>
+                <div class="row justify-content-around mt-5">
+                    <button class="btn btn-outline-success col-2" type="submit">
+                        <span><i class="bi bi-cloud-upload-fill"></i></span>
+                    </button>
+                    <button class="btn btn-outline-success col-2">
+                        <i class="bi bi-x-square-fill"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
