--- a/DynamicWeb/DynamicWeb/templates/list.html
+++ b/DynamicWeb/DynamicWeb/templates/list.html
@@ -10,10 +10,10 @@
                             <th>Organisation name</th><th>Organisation nature</th>
                             <th>Organisation employees count</th><th>Organisation opennings</th>
                             <th>Organisation location</th><th>Organisation basic salary</th>
-                            <th>Organisation ratings</th>
+                            <th>Organisation ratings</th><th>Organisation actions</th>
                         </tr>
                     </thead>
-                    <tbody class="bg-warning text-light">
+                    <tbody class="bg-secondary text-light">
                         {%if mylist%}
                             {%for hello in mylist%}
                                 <tr>
@@ -27,6 +27,14 @@
                                     <td>{{hello.employees}}</td><td>{{hello.opennings}}</td>
                                     <td>{{hello.place}}</td><td>{{hello.basic}}</td>
                                     <td>{{hello.ratings}}</td>
+                                    <td>
+                                        <a href="/crudl/new/{{hello.id}}" class="btn btn-outline-warning col-4 me-2">
+                                            <i class="bi bi-pen-fill text-center"></i>
+                                        </a>
+                                        <a href="/crudl/del/{{hello.id}}" class="btn btn-outline-dark col-4">
+                                            <i class="bi bi-trash3-fill"></i>
+                                        </a>
+                                    </td>
                                 </tr>
                             {%endfor%}
                         {%endif%}
