queryset and field lookups

--- a/DynamicWeb/DynamicWeb/templates/home.html
+++ b/DynamicWeb/DynamicWeb/templates/home.html
@@ -12,6 +12,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+              CorporateRepo
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#corp" aria-controls="corp" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="corp">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item me-1 active">
+                <a class="btn btn-primary" href="/crudl/">Home</a>
+              </li>
+              <li class="nav-item me-1">
+                <a class="btn btn-primary" href="/crudl/find">Short list</a>
+              </li>
+              <li class="nav-item me-1">
+                <a class="btn btn-primary" href="/crudl/new">New</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+
     <div class="container">
         <h1 class="text-center text-primary">Corporates CRUDL Demo</h1>
         <div class="row justify-content-center">
