--- a/DynamicWeb/DynamicWeb/templates/fill.html
+++ b/DynamicWeb/DynamicWeb/templates/fill.html
@@ -5,7 +5,7 @@
             {{data}}
         </div>
         <div class="row justify-content-center">
-            <form action="" method="POST" class="col-lg-8 col-md-10 col-sm-12 shadow rounded p-4">
+            <form action="/crudl/new" method="POST" class="col-lg-8 col-md-10 col-sm-12 shadow rounded p-4">
                 {%csrf_token%}
                 <!-- {{submission|crispy}} -->
                 <div class="row">
