Final commit Django

--- a/DynamicWeb/DynamicWeb/templates/login.html
+++ b/DynamicWeb/DynamicWeb/templates/login.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center mt-5">
-            <form action="" method="POST" class="col-lg-6 col-md-8 col-sm-12 shadow">
+            <form action="/crudl/" method="POST" class="col-lg-6 col-md-8 col-sm-12 shadow">
                 {%csrf_token%}
                 <div class="form-group">
                     <label>Enter the username</label>
